<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpcionCrear_Activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_CrearAutor"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/crear_op2"
        app:layout_constraintBottom_toTopOf="@+id/btn_CrearEstanteria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_CrearEstanteria"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/crear_op3"
        app:layout_constraintBottom_toTopOf="@+id/btn_CrearEditorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_CrearEditorial"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:text="@string/crear_op4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_CrearLibro"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/crear_op1"
        app:layout_constraintBottom_toTopOf="@+id/btn_CrearAutor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="353dp"
        android:layout_height="49dp"
        android:layout_marginStart="10dp"
        android:text="@string/crear_info"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_CrearLibro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>