<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpcionListar_Activity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listar_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_VerLibros"
        android:layout_width="155dp"
        android:layout_height="57dp"
        android:layout_marginBottom="20dp"
        android:text="@string/listar_op1"
        app:layout_constraintBottom_toTopOf="@+id/btn_VerEstanterias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_VerAutores"
        android:layout_width="157dp"
        android:layout_height="54dp"
        android:layout_marginBottom="20dp"
        android:text="@string/listar_op2"
        app:layout_constraintBottom_toTopOf="@+id/btn_VerLibros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_VerEstanterias"
        android:layout_width="157dp"
        android:layout_height="58dp"
        android:layout_marginBottom="20dp"
        android:text="@string/listar_op3"
        app:layout_constraintBottom_toTopOf="@+id/btn_VerEditoriales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_VerEditoriales"
        android:layout_width="157dp"
        android:layout_height="56dp"
        android:layout_marginBottom="100dp"
        android:text="@string/listar_op4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="376dp"
        android:layout_height="56dp"
        android:text="@string/listar_info"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_VerAutores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>