<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormEditorialActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formEditorialTitle"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_nombreEditorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_nombreEditorial"
        android:layout_width="221dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/formEditorial_txt1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_nacionalidadEditorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/txt_nacionalidadEditorial"
        android:layout_width="248dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/formEditorial_txt2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_registrarEditorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombreEditorial" />

    <Button
        android:id="@+id/btn_registrarEditorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_Registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nacionalidadEditorial" />
</androidx.constraintlayout.widget.ConstraintLayout>